--- a/style.css
+++ b/style.css
@@ -2789,44 +2789,64 @@ a img {
 }
 @media all and (min-width: 50em) {
   .single-post.layout-post-right-sidebar .content-container:before,
-  .page.layout-page-right-sidebar .content-container:before {
+  .page.layout-page-right-sidebar .content-container:before,
+  .single-post.layout-post-right-sidebar-wide .content-container:before,
+  .page.layout-page-right-sidebar-wide .content-container:before {
     display: none;
   }
   .single-post.layout-post-right-sidebar .main,
-  .page.layout-page-right-sidebar .main {
+  .page.layout-page-right-sidebar .main,
+  .single-post.layout-post-right-sidebar-wide .main,
+  .page.layout-page-right-sidebar-wide .main {
     margin-left: 25%;
   }
   .single-post.layout-post-right-sidebar .entry article > .featured-image,
-  .page.layout-page-right-sidebar .entry article > .featured-image {
+  .page.layout-page-right-sidebar .entry article > .featured-image,
+  .single-post.layout-post-right-sidebar-wide .entry article > .featured-image,
+  .page.layout-page-right-sidebar-wide .entry article > .featured-image {
     left: -56%;
     width: 156%;
   }
 
   .single-post.layout-post-left-sidebar .content-container:after,
-  .page.layout-page-left-sidebar .content-container:after {
+  .page.layout-page-left-sidebar .content-container:after,
+  .single-post.layout-post-left-sidebar-wide .content-container:after,
+  .page.layout-page-left-sidebar-wide .content-container:after {
     display: none;
   }
   .single-post.layout-post-left-sidebar .entry article > .featured-image,
-  .page.layout-page-left-sidebar .entry article > .featured-image {
+  .page.layout-page-left-sidebar .entry article > .featured-image,
+  .single-post.layout-post-left-sidebar-wide .entry article > .featured-image,
+  .page.layout-page-left-sidebar-wide .entry article > .featured-image {
     width: 156%;
   }
 
   .single-post.layout-post-no-sidebar .content-container:before, .single-post.layout-post-no-sidebar .content-container:after,
   .page.layout-page-no-sidebar .content-container:before,
-  .page.layout-page-no-sidebar .content-container:after {
+  .page.layout-page-no-sidebar .content-container:after,
+  .single-post.layout-post-no-sidebar-wide .content-container:before,
+  .single-post.layout-post-no-sidebar-wide .content-container:after,
+  .page.layout-page-no-sidebar-wide .content-container:before,
+  .page.layout-page-no-sidebar-wide .content-container:after {
     display: none;
   }
   .single-post.layout-post-no-sidebar .main,
-  .page.layout-page-no-sidebar .main {
+  .page.layout-page-no-sidebar .main,
+  .single-post.layout-post-no-sidebar-wide .main,
+  .page.layout-page-no-sidebar-wide .main {
     float: none;
   }
   .single-post.layout-post-no-sidebar .entry article > .featured-image,
-  .page.layout-page-no-sidebar .entry article > .featured-image {
+  .page.layout-page-no-sidebar .entry article > .featured-image,
+  .single-post.layout-post-no-sidebar-wide .entry article > .featured-image,
+  .page.layout-page-no-sidebar-wide .entry article > .featured-image {
     left: -28%;
     width: 156%;
   }
   .single-post.layout-post-no-sidebar .post-header,
-  .page.layout-page-no-sidebar .post-header {
+  .page.layout-page-no-sidebar .post-header,
+  .single-post.layout-post-no-sidebar-wide .post-header,
+  .page.layout-page-no-sidebar-wide .post-header {
     position: relative;
     left: -14%;
     width: 128%;
@@ -2834,10 +2854,46 @@ a img {
     margin: 1.125em 0 1.5em;
   }
   .single-post.layout-post-no-sidebar .post-title,
-  .page.layout-page-no-sidebar .post-title {
+  .page.layout-page-no-sidebar .post-title,
+  .single-post.layout-post-no-sidebar-wide .post-title,
+  .page.layout-page-no-sidebar-wide .post-title {
     font-size: 2.375em;
     /* 38px / 16px */
     line-height: 1.342;
     /* 51px */
+  }
+
+  .layout-page-left-sidebar-wide .post-header,
+  .layout-page-left-sidebar-wide .post-content,
+  .layout-page-left-sidebar-wide .post-meta,
+  .layout-page-left-sidebar-wide .more-from-category,
+  .layout-page-left-sidebar-wide .comments,
+  .layout-page-right-sidebar-wide .post-header,
+  .layout-page-right-sidebar-wide .post-content,
+  .layout-page-right-sidebar-wide .post-meta,
+  .layout-page-right-sidebar-wide .more-from-category,
+  .layout-page-right-sidebar-wide .comments {
+    position: relative;
+    width: 156%;
+  }
+
+  .single-post.layout-post-right-sidebar-wide .main,
+  .page.layout-page-right-sidebar-wide .main {
+    margin-left: 0;
+  }
+  .single-post.layout-post-right-sidebar-wide .entry article > .featured-image,
+  .page.layout-page-right-sidebar-wide .entry article > .featured-image {
+    left: 0;
+  }
+
+  .single-post.layout-post-no-sidebar-wide .main,
+  .page.layout-page-no-sidebar-wide .main {
+    width: 75%;
+    margin-left: 12.5%;
+  }
+  .single-post.layout-post-no-sidebar-wide .entry article > .featured-image,
+  .page.layout-page-no-sidebar-wide .entry article > .featured-image {
+    left: -18%;
+    width: 136%;
   }
 }
