--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -8,6 +8,7 @@
   }
   .widget {
     margin-bottom: $baseline-height;
+    clear: both;
   }
   .widget-title {
     @extend %fourteen-pixels-title;
