--- a/rtl.css
+++ b/rtl.css
@@ -2307,6 +2307,15 @@ a img {
   margin: 0.75em 0;
   border-top: solid 1px #DCDCDC;
 }
+.sidebar-left .inner:after,
+.sidebar-right .inner:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
+}
 .sidebar-left .widget,
 .sidebar-right .widget {
   margin-bottom: 1.5em;
@@ -2787,6 +2796,17 @@ a img {
     /* 21px / 16px */
     line-height: 1.333;
     /* 28px */
+  }
+}
+@media all and (min-width: 37.5em) {
+  .layout-left-sidebar .sidebar-left .widget,
+  .layout-left-sidebar-wide .sidebar-left .widget {
+    width: auto;
+  }
+
+  .layout-right-sidebar .sidebar-right .widget,
+  .layout-right-sidebar-wide .sidebar-right .widget {
+    width: auto;
   }
 }
 @media all and (min-width: 50em) {
