--- a/sass/_layouts.scss
+++ b/sass/_layouts.scss
@@ -1,3 +1,20 @@
+@media all and (min-width: $six-hundred) {
+
+  .layout-left-sidebar,
+  .layout-left-sidebar-wide {
+
+    .sidebar-left .widget {
+      width: auto;
+    }
+  }
+  .layout-right-sidebar,
+  .layout-right-sidebar-wide {
+
+    .sidebar-right .widget {
+      width: auto;
+    }
+  }
+}
 @media all and (min-width: $eight-hundred) {
 
   // Remove left sidebar border
