--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -5,6 +5,10 @@
     padding: $baseline-height $column * 2 0;
     margin: $baseline-height/2 0;
     border-top: solid 1px $color-gray-86;
+
+    &:after {
+      @include clearfix;
+    }
   }
   .widget {
     margin-bottom: $baseline-height;
