--- a/sass/_featured_image.scss
+++ b/sass/_featured_image.scss
@@ -16,14 +16,17 @@
     width: 100%;
   }
   .ccfic {
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    text-align: center;
-    background: rgba(0,0,0,0.7);
-    color: white;
-    padding: 4px 4px 4px 12px;
+    padding: 12px 0;
     font-size: 13px;
+  }
+}
+.blog,
+.archive,
+.search,
+.more-from-category {
+
+  .featured-image .ccfic {
+    display: none;
   }
 }
 .layout-double .double,
