--- a/sass/_widget_areas.scss
+++ b/sass/_widget_areas.scss
@@ -18,7 +18,8 @@
 .widget-area-above-main,
 .widget-area-after-first-post,
 .widget-area-after-post,
-.widget-area-after-page {
+.widget-area-after-page,
+.widget-area-site-footer {
 
   &.active-1 {
 
